Tried to fix icons wrapping on mobile

--- a/main.css
+++ b/main.css
@@ -208,7 +208,7 @@ html {
 	  width: 100%;
 	  height: 10vh;
 	  display: flex;
-	  flex-wrap: wrap;
+	  flex-wrap: nowrap;
 	  align-items: center;
 	  justify-content: center;
 	  padding: 1rem;
